move pdfs into folers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <title>Malin Altenmüller</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
@@ -118,7 +118,7 @@
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
 	    the Huawei-Edinburgh Joint Lab <a href="https://homepages.inf.ed.ac.uk/opb/jointlab/"
 	    target="_blank">Workshop</a>, 12/12/2023,
-	    <a href="joint-lab-control-flow.pdf" target="_blank">[slides]</a>
+	    <a href="slides/joint-lab-control-flow.pdf" target="_blank">[slides]</a>
 	  </li>
 	</ul>
       </li>
@@ -127,7 +127,7 @@
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
 	    the <a href="https://www.irif.fr/~greta/" target="_blank">GReTA</a>
 	    Seminar Series, 08/09/2023,
-	    <a href="greta-seminar.pdf" target="_blank">[slides]</a>,
+	    <a href="slides/greta-seminar.pdf" target="_blank">[slides]</a>,
 	    <a href="https://www.youtube.com/live/vKcW8OlBHLw?si=lRVrh3b4UXglVrgI"
 	       target="_blank">[recording]</a>
 	  </li>
@@ -137,37 +137,37 @@
       <li><b>Control Flow as a Contour of Data Flow</b>
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at a Workshop on Diagrammatic Methods in
-	    Edinburgh, 24/01/2023, <a href="control-flow.pdf" target="_blank">[slides]</a></li>
+	    Edinburgh, 24/01/2023, <a href="slides/control-flow.pdf" target="_blank">[slides]</a></li>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
 	    <a href="https://msp.cis.strath.ac.uk/msp101.html"
 	       target="_blank">MSP 101</a>, 09/06/2023,
-	    <a href="msp101-control-flow.pdf" target="_blank">[slides]</a></li>
+	    <a href="slides/msp101-control-flow.pdf" target="_blank">[slides]</a></li>
 	</ul>
       <li><b>A Category of Plane Graphs</b><br>&nbsp;&nbsp;&nbsp;&nbsp;at
       <a href="https://www.cl.cam.ac.uk/events/syco/9/"
       target="_blank">SYCO9</a> in Como,
-      09/09/2022, <a href="syco9-abstract.pdf">[abstract]</a>
-      and <a href="cat-plane-graphs.pdf" target="_blank">[slides]</a>, this talk
+      09/09/2022, <a href="papers/syco9-abstract.pdf">[abstract]</a>
+      and <a href="slides/cat-plane-graphs.pdf" target="_blank">[slides]</a>, this talk
       was voted the <i>Best Student Presentation</i> of the event</li> <!--&#9733;-->
       <li><b>A Category of Surface-Embedded Graphs</b><br>&nbsp;&nbsp;&nbsp;&nbsp;
 	at <a href="https://msp.cis.strath.ac.uk/act2022/"
 	target="_blank">ACT</a> in Glasgow,
-	21/07/2022, <a href="cat-embedded-graphs.pdf">[slides]</a></li>
+	21/07/2022, <a href="slides/cat-embedded-graphs.pdf">[slides]</a></li>
       <li><b>A Datatype of Planar Graphs</b><br>&nbsp;&nbsp;&nbsp;&nbsp;
       at <a href="https://types22.inria.fr/" target="_blank">TYPES</a> in
-      Nantes, 23/06/2022, <a href="types-2022.pdf"
-      target="_blank">[abstract]</a> and <a href="type-plane-graphs.pdf" target="_blank">[slides]</a></li>
+      Nantes, 23/06/2022, <a href="papers/types-2022.pdf"
+      target="_blank">[abstract]</a> and <a href="slides/type-plane-graphs.pdf" target="_blank">[slides]</a></li>
       <li><b>Decorated Trees</b><br>&nbsp;&nbsp;&nbsp;&nbsp; at
       <a href="https://spls-series.github.io/meetings/2021/october/" target="_blank">SPLS</a> (online),
-      20/10/2021, <a href="decorated-trees.pdf" target="_blank">[slides]</a></li>
+      20/10/2021, <a href="slides/decorated-trees.pdf" target="_blank">[slides]</a></li>
       <li><b>Some Thoughts on a Datatype for Higher Genus Graphs</b> <br> &nbsp;&nbsp;&nbsp;&nbsp;at
       <a href="https://msp.cis.strath.ac.uk/msp101.html" target="_blank">MSP
-      101</a>, 25/02/2021, <a href="higher-genus-graphs.pdf" target="_blank">[slides]</a></li>
+      101</a>, 25/02/2021, <a href="slides/higher-genus-graphs.pdf" target="_blank">[slides]</a></li>
       <li><b>A Combinatorial Presentation of the Operad of Plane Graphs</b>
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
       <a href="https://www.cl.cam.ac.uk/events/syco/strings3-syco5/"
-	 target="_blank">STRINGS3</a> in Birmingham, 02/09/2019, <a href="operad-plane-graphs.pdf" target="_blank">[slides]</a></li>
+	 target="_blank">STRINGS3</a> in Birmingham, 02/09/2019, <a href="slides/operad-plane-graphs.pdf" target="_blank">[slides]</a></li>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://msp.cis.strath.ac.uk/msp101.html" target="_blank">MSP 101</a>, 30/08/2019</li>
 	</ul>
       </li>
@@ -197,13 +197,13 @@
 	<b>Read the <s>Mood</s> Mode and Stay Positve - adding polarity annotations in
 	  Agda</b><br>
 	&nbsp;&nbsp;&nbsp;&nbsp;joint work with J. Ceulemans, L. Escot, A. Nuyts, J. Poiret<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;<a href="types-2023.pdf" target="_blank">[abstract]</a> at <a href="https://types2023.webs.upv.es/" target="_blank">TYPES</a> in
+	&nbsp;&nbsp;&nbsp;&nbsp;<a href="papers/types-2023.pdf" target="_blank">[abstract]</a> at <a href="https://types2023.webs.upv.es/" target="_blank">TYPES</a> in
 	Val&egrave;ncia, 12/06/2023
       </li>
       <li>
 	<b>TypOS: An Operating System for Typechecking Actors</b><br>
 	&nbsp;&nbsp;&nbsp;&nbsp;joint work with G. Allais,  C. McBride, G. Nakov, F. Nordvall Forsberg, C. Roy<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;<a href="TypOS.pdf" target="_blank">[abstract]</a>
+	&nbsp;&nbsp;&nbsp;&nbsp;<a href="papers/TypOS.pdf" target="_blank">[abstract]</a>
 	and <a href="https://www.youtube.com/watch?v=2ZmoexvTw6c"
 	target="_blank">[talk recording]</a> at at <a href="https://types22.inria.fr/"
 	target="_blank">TYPES</a> in Nantes, 23/06/2022
