--- a/index.html
+++ b/index.html
@@ -69,17 +69,19 @@
     </div>
   </section>
 
-<!--
   <section class="section is-size-5">
     <div class="container">
       <h3 class="title">News</h3>
       <dl>
-
+	<li>
+	  I will be giving a talk at the
+	next <a href="https://sites.google.com/view/catniporg/meetings"
+	target="_blank">CATNIP</a> meeting in Aberdeen on the 19th of November.
 	</li>
       </dl>
     </div>
   </section>
--->
+
 <section class="section is-size-5">
   <div class="container">
     <h3 class="title"> Papers </h3>
