--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           thesis on combinatorial representations of string diagrams for
           non-symmetric monoidal categories.
 	  <br><br>
-	  During some my PhD I was also a research intern with
+	  During some of my PhD I was also a research intern with
 	  the <a href="https://blogs.ed.ac.uk/he-lab/"
 	  target="_blank">Programming Languages Group</a> at Huawei in
 	  Edinburgh.
