catnip has happened

--- a/index.html
+++ b/index.html
@@ -68,19 +68,16 @@
       </div>
     </div>
   </section>
-
+<!--
   <section class="section is-size-5">
     <div class="container">
       <h3 class="title">News</h3>
       <dl>
-	<li>
-	  I will be giving a talk at the
-	next <a href="https://sites.google.com/view/catniporg/meetings"
-	target="_blank">CATNIP</a> meeting in Aberdeen on the 19th of November.
-	</li>
+
       </dl>
     </div>
   </section>
+-->
 
 <section class="section is-size-5">
   <div class="container">
@@ -106,6 +103,14 @@
   <div class="container">
     <h3 class="title">Talks</h3>
     <dl>
+      <li><b>A Category of Graphs with Substitution and Pattern Matching</b>
+	<ul>
+	  <li>&nbsp;&nbsp;&nbsp;&nbsp;invited talk at
+	    <a href="https://sites.google.com/view/catniporg/meetings"
+	target="_blank">CATNIP</a>, 19/11/2024
+	  </li>
+	</ul>
+      </li>
       <li><b>Plane Graphs, (Co-)Operads, and Pattern Matching</b>
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
