add catnip slides

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;invited talk at
 	    <a href="https://sites.google.com/view/catniporg/meetings"
-	target="_blank">CATNIP</a>, 19/11/2024
+	       target="_blank">CATNIP</a>, 19/11/2024,
+	    <a href="slides/catnip-plane-graphs.pdf" target="_blank">[slides]</a>
+
 	  </li>
 	</ul>
       </li>
