added newest talks

--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
   <div class="container">
     <h3 class="title">Talks</h3>
     <dl>
+      <li><b>A Data Type of Intrinsically Plane Graphs</b>
+	<ul>
+	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at the British Colloqium for Theoretical
+	  Computer Science <a href="https://msp.cis.strath.ac.uk/bctcs2025/index.html"
+	  target="_blank">BCTCS</a>, 14/04/2025
+	  </li>
+	  <li><b>Notions of Monads and Comonads in Programming</b>
+	<ul>
+	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
+	  the <a href="https://www.maths.ed.ac.uk/~adona/seminar.html">Edinburgh
+	  Category Theory Seminar</a>, 19/03/2025
+	  </li>
       <li><b>A Category of Graphs with Substitution and Pattern Matching</b>
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;invited talk at
