add bctcs slides

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at the British Colloqium for Theoretical
 	  Computer Science <a href="https://msp.cis.strath.ac.uk/bctcs2025/index.html"
-	  target="_blank">BCTCS</a>, 14/04/2025
+			      target="_blank">BCTCS</a>, 14/04/2025,
+	    <a href="slides/bctcs.pdf" target="_blank">[slides]</a>
 	  </li>
 	</ul>
       </li>
