--- a/index.html
+++ b/index.html
@@ -68,16 +68,19 @@
       </div>
     </div>
   </section>
-<!--
+
   <section class="section is-size-5">
     <div class="container">
       <h3 class="title">News</h3>
       <dl>
-
+	<li>I will be giving a talk at the
+	<a href="https://europroofnet.github.io/women-epn-2025/"
+	target="_blank">Women in EuroProofNet 2025</a>, co-located with
+	<a href="https://msp.cis.strath.ac.uk/types2025/" target="_blank">TYPES
+	2025</a> on the 10th June 2025.
       </dl>
     </div>
   </section>
--->
 
 <section class="section is-size-5">
   <div class="container">
