--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
     <div class="container">
       <h3 class="title">News</h3>
       <dl>
-	<li>I will be giving a talk at the
+	<li>I will be giving a talk on <b>Reasoning with strict symmetric
+	monoidal categories in Agda</b><br> at the
 	<a href="https://europroofnet.github.io/women-epn-2025/"
-	target="_blank">Women in EuroProofNet 2025</a>, co-located with
+	target="_blank">Women in EuroProofNet 2025</a> workshop, co-located with
 	<a href="https://msp.cis.strath.ac.uk/types2025/" target="_blank">TYPES
 	2025</a> on the 10th June 2025.
       </dl>
