--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
   </section>
-
+<!--
   <section class="section is-size-5">
     <div class="container">
       <h3 class="title">News</h3>
@@ -82,6 +82,7 @@
       </dl>
     </div>
   </section>
+  -->
 
 <section class="section is-size-5">
   <div class="container">
@@ -107,6 +108,21 @@
   <div class="container">
     <h3 class="title">Talks</h3>
     <dl>
+      <li>
+	<b>Reasoning with strict symmetric monoidal categories in Agda</b>
+	<ul>
+	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at
+			the <a href="https://europroofnet.github.io/women-epn-2025/"
+			target="_blank">Women in EuroProofNet 2025</a> workshop,
+			co-located with
+	    <a href="https://msp.cis.strath.ac.uk/types2025/"
+	      target="_blank">TYPES
+	      2025</a>, 10/06/2025, <a href="slides/strict-smcs-wepn.pdf"
+	      target="_blank">[slides]</a>
+	  </li>
+	</ul>
+      </li>
+
       <li><b>A Data Type of Intrinsically Plane Graphs</b>
 	<ul>
 	  <li>&nbsp;&nbsp;&nbsp;&nbsp;at the British Colloqium for Theoretical
