update thesis source code

--- a/thesis/src/Lib.Decidable.html
+++ b/thesis/src/Lib.Decidable.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Lib.Decidable</title><link rel="stylesheet" href="Agda.css"></head><body><pre class="Agda"><a id="1" class="Keyword">module</a> <a id="8" href="Lib.Decidable.html" class="Module">Lib.Decidable</a> <a id="22" class="Keyword">where</a>
+<html><head><meta charset="utf-8"><title>Lib.Decidable</title><link rel="stylesheet" href="Conor.css"></head><body><pre class="Agda">
+<a id="2" class="Keyword">module</a> <a id="9" href="Lib.Decidable.html" class="Module">Lib.Decidable</a> <a id="23" class="Keyword">where</a>
 
-<a id="29" class="Keyword">open</a> <a id="34" class="Keyword">import</a> <a id="41" href="Lib.Zero.html" class="Module">Lib.Zero</a>
-<a id="50" class="Keyword">open</a> <a id="55" class="Keyword">import</a> <a id="62" href="Lib.Two.html" class="Module">Lib.Two</a>
-<a id="70" class="Keyword">open</a> <a id="75" class="Keyword">import</a> <a id="82" href="Lib.Sigma.html" class="Module">Lib.Sigma</a>
+<a id="30" class="Keyword">open</a> <a id="35" class="Keyword">import</a> <a id="42" href="Lib.Zero.html" class="Module">Lib.Zero</a>
+<a id="51" class="Keyword">open</a> <a id="56" class="Keyword">import</a> <a id="63" href="Lib.Two.html" class="Module">Lib.Two</a>
+<a id="71" class="Keyword">open</a> <a id="76" class="Keyword">import</a> <a id="83" href="Lib.Sigma.html" class="Module">Lib.Sigma</a>
 
-<a id="Dec"></a><a id="93" href="Lib.Decidable.html#93" class="Function">Dec</a> <a id="97" class="Symbol">:</a> <a id="99" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="103" class="Symbol">→</a> <a id="105" href="Agda.Primitive.html#320" class="Primitive">Set</a>
-<a id="109" href="Lib.Decidable.html#93" class="Function">Dec</a> <a id="113" href="Lib.Decidable.html#113" class="Bound">X</a> <a id="115" class="Symbol">=</a> <a id="117" class="Symbol">(</a><a id="118" href="Lib.Decidable.html#113" class="Bound">X</a> <a id="120" class="Symbol">→</a> <a id="122" href="Lib.Zero.html#51" class="Datatype">Zero</a><a id="126" class="Symbol">)</a> <a id="128" href="Lib.Sigma.html#488" class="Function Operator">+</a> <a id="130" href="Lib.Decidable.html#113" class="Bound">X</a>
+<a id="Dec"></a><a id="94" href="Lib.Decidable.html#94" class="Function">Dec</a> <a id="98" class="Symbol">:</a> <a id="100" href="Agda.Primitive.html#388" class="Primitive">Set</a> <a id="104" class="Symbol">→</a> <a id="106" href="Agda.Primitive.html#388" class="Primitive">Set</a>
+<a id="110" href="Lib.Decidable.html#94" class="Function">Dec</a> <a id="114" href="Lib.Decidable.html#114" class="Bound">X</a> <a id="116" class="Symbol">=</a> <a id="118" class="Symbol">(</a><a id="119" href="Lib.Decidable.html#114" class="Bound">X</a> <a id="121" class="Symbol">→</a> <a id="123" href="Lib.Zero.html#52" class="Datatype">Zero</a><a id="127" class="Symbol">)</a> <a id="129" href="Lib.Sigma.html#645" class="Function Operator">+</a> <a id="131" href="Lib.Decidable.html#114" class="Bound">X</a>
 </pre></body></html>
