--- a/thesis/src/Lib.Zero.html
+++ b/thesis/src/Lib.Zero.html
@@ -1,7 +1,18 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Lib.Zero</title><link rel="stylesheet" href="Agda.css"></head><body><pre class="Agda"><a id="1" class="Keyword">module</a> <a id="8" href="Lib.Zero.html" class="Module">Lib.Zero</a> <a id="17" class="Keyword">where</a>
+<html><head><meta charset="utf-8"><title>Lib.Zero</title><link rel="stylesheet" href="Conor.css"></head><body><pre class="Agda">
+<a id="2" class="Keyword">module</a> <a id="9" href="Lib.Zero.html" class="Module">Lib.Zero</a> <a id="18" class="Keyword">where</a>
 
-<a id="24" class="Keyword">open</a> <a id="29" class="Keyword">import</a> <a id="36" href="Lib.Hide.html" class="Module">Lib.Hide</a>
+<a id="25" class="Keyword">open</a> <a id="30" class="Keyword">import</a> <a id="37" href="Lib.Hide.html" class="Module">Lib.Hide</a>
 
-<a id="46" class="Keyword">data</a> <a id="Zero"></a><a id="51" href="Lib.Zero.html#51" class="Datatype">Zero</a> <a id="56" class="Symbol">:</a> <a id="58" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="62" class="Keyword">where</a>
+<a id="47" class="Keyword">data</a> <a id="Zero"></a><a id="52" href="Lib.Zero.html#52" class="Datatype">Zero</a> <a id="57" class="Symbol">:</a> <a id="59" href="Agda.Primitive.html#388" class="Primitive">Set</a> <a id="63" class="Keyword">where</a>
+
+<a id="HideZero"></a><a id="70" href="Lib.Zero.html#70" class="Function">HideZero</a> <a id="79" class="Symbol">=</a> <a id="81" href="Lib.Hide.html#32" class="Record">Hide</a> <a id="86" href="Lib.Zero.html#52" class="Datatype">Zero</a>
+
+<a id="92" class="Comment">-- side note: the Agda stdlib currently implements Zero as Hide Zero</a>
+<a id="161" class="Comment">-- (https://agda.github.io/agda-stdlib/master/Data.Empty.html)</a>
+<a id="224" class="Comment">-- this way Agda can judgementally declare that all elements of ⊥ are equal</a>
+<a id="300" class="Comment">-- (especially functions that return a proof of ⊥ are equal)</a>
+
+<a id="magic"></a><a id="362" href="Lib.Zero.html#362" class="Function">magic</a> <a id="368" class="Symbol">:</a> <a id="370" class="Symbol">{</a> <a id="372" href="Lib.Zero.html#372" class="Bound">A</a> <a id="374" class="Symbol">:</a> <a id="376" href="Agda.Primitive.html#388" class="Primitive">Set</a> <a id="380" class="Symbol">}</a> <a id="382" class="Symbol">→</a> <a id="384" href="Lib.Zero.html#52" class="Datatype">Zero</a> <a id="389" class="Symbol">→</a> <a id="391" href="Lib.Zero.html#372" class="Bound">A</a>
+<a id="393" href="Lib.Zero.html#362" class="Function">magic</a> <a id="399" class="Symbol">()</a>
 </pre></body></html>
