make picture slighly bigger

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	    malin [dot] altenmuller [at] ed [dot] ac [dot] uk<br><br>
 	    My pronouns are <a href="https://pronouns.org/she-her" target="_blank">she/her</a>.
 	  </div>
-	  <div class="column is-two-fifths">
+	  <div class="column is-one-half">
 	    <img src="group.jpg" alt="a photo of the quantum programming group
 	    in Edinburgh">
 	  </div>
