--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 	<dl>
 	  <li>
 	    <b>Combinatorial Presentations of String Diagrams for Non-Symmetric
-	    Monoidal Categories (PhD Thesis)</b>, <br>
-	    &nbsp;&nbsp;&nbsp;&nbsp; document available <a href="thesis/thesis.pdf"
+	    Monoidal Categories (PhD Thesis)</b> <br>
+	    &nbsp;&nbsp;&nbsp;&nbsp; Document available <a href="thesis/thesis.pdf"
 		     target="_blank">[here]</a> (version before corrections)
 	  </li>
 	  <li>
