add spring school

--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
 
      </div>
     </section>
-<!--
     <section class="section is-size-5">
       <div class="container">
 	<h3 class="title">News</h3>
 	<dl>
-	  <li> I am one of the organisers of the Quantum Informatics Spring
-	  School on the beautiful Isle of Skye. Save the date: 25/05-29/05, and
-	  check back for more details.
+	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
+	  School 2026</b> on the Isle of Skye. <br>Save the date: 24-29 of May
+	  2026 and keep an eye on the
+	  <a href="<a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
+	  target="_blank">website</a> for confirmed details.
 	</dl>
       </div>
     </section>
--->
+
     <section class="section is-size-5">
       <div class="container">
 	<h3 class="title"> Papers </h3>
