--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
       <div class="container">
 	<h3 class="title">News</h3>
 	<dl>
+	  <li> <b>Strictness by Rewrite: Formalising Bipermutative Categories
+	      and Quantum Program Semantics in Agda</b><br>
+	    <ul>
+	      <li>&nbsp;&nbsp;&nbsp;&nbsp;poster at
+		<a href="https://popl26.sigplan.org/home/planqc-2026"
+		   target="_blank">PLanQC</a>, 12/01/2026,
+		<a href="papers/planqc-2026.pdf" target="_blank">[extended abstract]</a>
+
+	      </li>
+	    </ul>
 	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
 	  School 2026</b> on the Isle of Skye. <br>Save the date: 24-29 of May
 	  2026 and keep an eye on the
