--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<h3 class="title">Malin Altenmüller</h3><br>
 	<div class="columns">
 	  <div class="column">
-	    I'm a postdoc in
-				    the <a href="https://homepages.inf.ed.ac.uk/cheunen/group.html"
+	    I'm a postdoc in the <a href="https://homepages.inf.ed.ac.uk/cheunen/group.html"
 				    target="_blank">Quantum Programming
 				    Group</a> within
 				    the <a href="https://www.quantumsoftwarelab.com/"
@@ -23,8 +22,7 @@
 				    programming languages for quantum systems.
 	    <br><br>
 
-	    Before that I was a PhD student in
-            the <a href="https://msp.cis.strath.ac.uk/"
+	    Before that I was a PhD student inthe <a href="https://msp.cis.strath.ac.uk/"
 		   target="_blank">Mathematically Structured Programming Group</a> at the
             University of Strathclyde in Glasgow. My thesis discusses
             combinatorial representations of string diagrams for non-symmetric
@@ -45,13 +43,14 @@
 	</div>
 	<div class="columns">
 	  <div class="column">
-	    I'm interested in graphical languages, combinatorial graph
-	    theory, programming language theory, type theory, metaprogramming, and
+	    I'm interested in graphical languages, combinatorial graph theory,
+	    programming language theory, type theory, metaprogramming, and
 	    applied category theory.<br><br>
 
 	    Do get in touch if you're interested in any of these topics! <br>
-	    malin [dot] altenmuller [at] ed [dot] ac [dot] uk<br><br>
-	    My pronouns are <a href="https://pronouns.org/she-her" target="_blank">she/her</a>.
+	    malin [dot] altenmuller [at] ed [dot] ac [dot] uk<br><br> My
+	    pronouns are <a href="https://pronouns.org/she-her"
+	    target="_blank">she/her</a>.
 	  </div>
 	  <div class="column is-one-half">
 	    <img src="group.jpg" alt="a photo of the quantum programming group
@@ -65,21 +64,25 @@
       <div class="container">
 	<h3 class="title">News</h3>
 	<dl>
-	  <li> <b>Strictness by Rewrite: Formalising Bipermutative Categories
+	  <li>I will be presenting a poster at the PLanQC workshop:<br>
+	    <b>Strictness by Rewrite: Formalising Bipermutative Categories
 	      and Quantum Program Semantics in Agda</b><br>
 	    <ul>
 	      <li>&nbsp;&nbsp;&nbsp;&nbsp;poster at
 		<a href="https://popl26.sigplan.org/home/planqc-2026"
 		   target="_blank">PLanQC</a>, 12/01/2026,
-		<a href="papers/planqc-2026.pdf" target="_blank">[extended abstract]</a>
+		<a href="papers/planqc-2026.pdf" target="_blank">[extended
+		abstract]</a>
 
 	      </li>
 	    </ul>
+	  </li>
 	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
 	  School 2026</b> on the Isle of Skye. <br>Save the date: 24-29 of May
-	  2026 and keep an eye on the
+	  2026, and keep an eye on the
 	  <a href="<a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
 	  target="_blank">website</a> for confirmed details.
+	  </li>
 	</dl>
       </div>
     </section>
@@ -90,175 +93,194 @@
 	<dl>
 	  <li>
 	    <b>Combinatorial Presentations of String Diagrams for Non-Symmetric
-	    Monoidal Categories (PhD Thesis)</b> <br>
-	    &nbsp;&nbsp;&nbsp;&nbsp; Document available <a href="thesis/thesis.pdf"
-		     target="_blank">[here]</a> (version before corrections)
+	    Monoidal Categories (PhD Thesis)</b> <br> &nbsp;&nbsp;&nbsp;&nbsp;
+	    Document available <a href="thesis/thesis.pdf"
+	    target="_blank">[here]</a> (version before corrections)
 	  </li>
 	  <li>
 	    <b>A Category of Surface-Embedded Graphs</b> (MA, R. Duncan)<br>
 	    &nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://msp.cis.strath.ac.uk/act2022/"
-					  target="_blank">Applied Category Theory 2022</a>, document available on
-	    <a href="https://arxiv.org/abs/2210.08914" target="_blank">[arXiv]</a><br>
-	    <i>We introduce a categorical formalism for rewriting surface-embedded graphs. Such
-	      graphs can represent string diagrams in a non-symmetric setting where we
-	      guarantee that the wires do not intersect each other. The main technical novelty
-	      is a new formulation of double pushout rewriting on graphs which explicitly
-	      records the boundary of the rewrite. Using this boundary structure we can
-	      augment these graphs with a rotation system, allowing the surface topology to be
-	      incorporated.</i>
+	    target="_blank">Applied Category Theory 2022</a>, document available
+	    on
+	    <a href="https://arxiv.org/abs/2210.08914"
+	    target="_blank">[arXiv]</a><br>
+	    <i>We introduce a categorical formalism for rewriting
+	      surface-embedded graphs. Such graphs can represent string diagrams
+	      in a non-symmetric setting where we guarantee that the wires do
+	      not intersect each other. The main technical novelty is a new
+	      formulation of double pushout rewriting on graphs which explicitly
+	      records the boundary of the rewrite. Using this boundary structure
+	      we can augment these graphs with a rotation system, allowing the
+	      surface topology to be incorporated.</i>
 	  </li>
 	</dl>
       </div>
     </section>
+
+    <section class="section is-size-5">
+      <div class="container">
+	<h3 class="title"> Abstracts </h3>
+	<dl>
+	  <li>
+	    <b>Strictness by Rewrite: Formalising Bipermutative Categories
+	      and Quantum Program Semantics in Agda</b><br>
+	      &nbsp;&nbsp;&nbsp;&nbsp;poster at
+		<a href="https://popl26.sigplan.org/home/planqc-2026"
+		   target="_blank">PLanQC</a>, 12/01/2026,
+		<a href="papers/planqc-2026.pdf" target="_blank">[extended
+		  abstract]</a>
+	  </li>
+	  <li>
+	    <b>A Category of Plane Graphs</b><br> &nbsp;&nbsp;&nbsp;&nbsp;at
+	    <a href="https://www.cl.cam.ac.uk/events/syco/9/"
+	       target="_blank">SYCO9</a> in Como,
+	       09/09/2022, <a href="papers/syco9-abstract.pdf">[abstract]</a>
+	       and <a href="slides/cat-plane-graphs.pdf"
+	       target="_blank">[slides]</a>, this talk was voted the <i>Best
+	       Student Presentation</i> of the event
+	  </li> <!--&#9733;-->
+	   <li>
+	    <b>Read the <s>Mood</s> Mode and Stay Positve - adding polarity
+	      annotations in Agda</b><br> &nbsp;&nbsp;&nbsp;&nbsp;joint work
+	      with J. Ceulemans, L. Escot, A. Nuyts, J. Poiret<br>
+	      &nbsp;&nbsp;&nbsp;&nbsp;
+	      at <a href="https://types2023.webs.upv.es/"
+	      target="_blank">TYPES</a> in Val&egrave;ncia,
+	      12/06/2023,<a href="papers/types-2023.pdf"
+	      target="_blank">[abstract]</a>
+	  </li>
+	  <li>
+	    <b>A Datatype of Planar Graphs</b><br> &nbsp;&nbsp;&nbsp;&nbsp;
+	    at <a href="https://types22.inria.fr/" target="_blank">TYPES</a> in
+	    Nantes, 23/06/2022, <a href="papers/types-2022.pdf"
+	    target="_blank">[abstract]</a>
+	    and <a href="slides/type-plane-graphs.pdf"
+	    target="_blank">[slides]</a>
+	  </li>
+	  <li>
+	    <b>TypOS: An Operating System for Typechecking Actors</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;joint work with G. Allais, C. McBride,
+	    G. Nakov, F. Nordvall Forsberg, C. Roy<br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at at <a href="https://types22.inria.fr/"
+	    target="_blank">TYPES</a> in Nantes,
+	    23/06/2022,<a href="papers/TypOS.pdf" target="_blank">[abstract]</a>
+	    and <a href="https://www.youtube.com/watch?v=2ZmoexvTw6c"
+	    target="_blank">[talk recording]</a>
+	  </li>
+	  <li><b>Containers of Applications and Applications of Containers</b><br>
+		&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://cas.oslo.no/types2019/"target="_blank">TYPES</a>
+		in Oslo, 13/06/2019
+	  </li>
+	</dl>
+      </div>
+    </section>
+
     <section class="section is-size-5">
       <div class="container">
 	<h3 class="title">Talks</h3>
 	<dl>
 	  <li>
-	    <b>Reasoning with strict symmetric monoidal categories in Agda</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
-		the <a href="https://europroofnet.github.io/women-epn-2025/"
-		       target="_blank">Women in EuroProofNet 2025</a> workshop,
-		co-located with
+	    <b>Reasoning with strict symmetric monoidal categories in Agda</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at
+	    the <a href="https://europroofnet.github.io/women-epn-2025/"
+	    target="_blank">Women in EuroProofNet 2025</a> workshop, co-located
+	    with
 		<a href="https://msp.cis.strath.ac.uk/types2025/"
-		   target="_blank">TYPES
-		  2025</a>, 10/06/2025, <a href="slides/strict-smcs-wepn.pdf"
-					   target="_blank">[slides]</a>
-	      </li>
-	    </ul>
+		   target="_blank">TYPES 2025</a>,
+		   10/06/2025, <a href="slides/strict-smcs-wepn.pdf"
+		   target="_blank">[slides]</a>
 	  </li>
 
-	  <li><b>A Data Type of Intrinsically Plane Graphs</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at the British Colloqium for Theoretical
-		Computer Science <a href="https://msp.cis.strath.ac.uk/bctcs2025/index.html"
-				    target="_blank">BCTCS</a>, 14/04/2025,
+	  <li><b>A Data Type of Intrinsically Plane Graphs</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at the British Colloqium for Theoretical
+	    Computer
+	    Science <a href="https://msp.cis.strath.ac.uk/bctcs2025/index.html"
+	    target="_blank">BCTCS</a>, 14/04/2025,
 		<a href="slides/bctcs.pdf" target="_blank">[slides]</a>
-	      </li>
-	    </ul>
 	  </li>
-	  <li><b>Notions of Monads and Comonads in Programming</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
-		the <a href="https://www.maths.ed.ac.uk/~adona/seminar.html">Edinburgh
-		  Category Theory Seminar</a>, 19/03/2025
-	      </li>
-	    </ul>
+	  <li><b>Notions of Monads and Comonads in Programming</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at
+	    the <a href="https://www.maths.ed.ac.uk/~adona/seminar.html">Edinburgh
+	    Category Theory Seminar</a>, 19/03/2025
 	  </li>
-	  <li><b>A Category of Graphs with Substitution and Pattern Matching</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;invited talk at
+	  <li><b>A Category of Graphs with Substitution and Pattern Matching</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;invited talk at
 		<a href="https://sites.google.com/view/catniporg/meetings"
 		   target="_blank">CATNIP</a>, 19/11/2024,
-		<a href="slides/catnip-plane-graphs.pdf" target="_blank">[slides]</a>
-
-	      </li>
-	    </ul>
+		<a href="slides/catnip-plane-graphs.pdf"
+		target="_blank">[slides]</a>
 	  </li>
-	  <li><b>Plane Graphs, (Co-)Operads, and Pattern Matching</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
-		<a href="https://msp.cis.strath.ac.uk/msp101.html" target="_blank">MSP 101</a>, 26/01/2024,
-		<a href="https://www.youtube.com/watch?v=XG65L3PVexc" target="_blank">[recording]</a>
-	      </li>
-	    </ul>
+	  <li><b>Plane Graphs, (Co-)Operads, and Pattern Matching</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at
+		<a href="https://msp.cis.strath.ac.uk/msp101.html"
+		target="_blank">MSP 101</a>, 26/01/2024,
+		<a href="https://www.youtube.com/watch?v=XG65L3PVexc"
+		target="_blank">[recording]</a>
 	  </li>
 
-	  <li><b>Contour Categories, Control Flow Analysis</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
-		the Huawei-Edinburgh Joint Lab <a href="https://homepages.inf.ed.ac.uk/opb/jointlab/"
-						  target="_blank">Workshop</a>, 12/12/2023,
-		<a href="slides/joint-lab-control-flow.pdf" target="_blank">[slides]</a>
-	      </li>
-	    </ul>
+	  <li><b>Contour Categories, Control Flow Analysis</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at the Huawei-Edinburgh Joint
+	    Lab <a href="https://homepages.inf.ed.ac.uk/opb/jointlab/"
+	    target="_blank">Workshop</a>, 12/12/2023,
+		<a href="slides/joint-lab-control-flow.pdf"
+		target="_blank">[slides]</a>
 	  </li>
-	  <li><b>A Category of Surface-Embedded Graphs</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
-		the <a href="https://www.irif.fr/~greta/" target="_blank">GReTA</a>
-		Seminar Series, 08/09/2023,
+	  <li><b>A Category of Surface-Embedded Graphs</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;invited talk at
+	    the <a href="https://www.irif.fr/~greta/" target="_blank">GReTA</a>
+	    Seminar Series, 08/09/2023,
 		<a href="slides/greta-seminar.pdf" target="_blank">[slides]</a>,
 		<a href="https://www.youtube.com/live/vKcW8OlBHLw?si=lRVrh3b4UXglVrgI"
 		   target="_blank">[recording]</a>
-	      </li>
-	    </ul>
 	  </li>
 
 	  <li><b>Control Flow as a Contour of Data Flow</b>
 	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at a Workshop on Diagrammatic Methods in
-		Edinburgh, 24/01/2023, <a href="slides/control-flow.pdf" target="_blank">[slides]</a></li>
+	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at a Workshop on Diagrammatic Methods
+		in Edinburgh, 24/01/2023, <a href="slides/control-flow.pdf"
+		target="_blank">[slides]</a></li>
 	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
 		<a href="https://msp.cis.strath.ac.uk/msp101.html"
 		   target="_blank">MSP 101</a>, 09/06/2023,
-		<a href="slides/msp101-control-flow.pdf" target="_blank">[slides]</a></li>
+		<a href="slides/msp101-control-flow.pdf"
+		target="_blank">[slides]</a></li>
 	    </ul>
-	  <li><b>A Category of Plane Graphs</b><br>&nbsp;&nbsp;&nbsp;&nbsp;at
-	    <a href="https://www.cl.cam.ac.uk/events/syco/9/"
-	       target="_blank">SYCO9</a> in Como,
-	    09/09/2022, <a href="papers/syco9-abstract.pdf">[abstract]</a>
-	    and <a href="slides/cat-plane-graphs.pdf" target="_blank">[slides]</a>, this talk
-	    was voted the <i>Best Student Presentation</i> of the event</li> <!--&#9733;-->
-	  <li><b>A Category of Surface-Embedded Graphs</b><br>&nbsp;&nbsp;&nbsp;&nbsp;
+	  <li><b>A Category of Surface-Embedded Graphs</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;
 	    at <a href="https://msp.cis.strath.ac.uk/act2022/"
-		  target="_blank">ACT</a> in Glasgow,
+	    target="_blank">ACT</a> in Glasgow,
 	    21/07/2022, <a href="slides/cat-embedded-graphs.pdf">[slides]</a></li>
-	  <li><b>A Datatype of Planar Graphs</b><br>&nbsp;&nbsp;&nbsp;&nbsp;
-	    at <a href="https://types22.inria.fr/" target="_blank">TYPES</a> in
-	    Nantes, 23/06/2022, <a href="papers/types-2022.pdf"
-				   target="_blank">[abstract]</a> and <a href="slides/type-plane-graphs.pdf" target="_blank">[slides]</a></li>
-	  <li><b>Decorated Trees</b><br>&nbsp;&nbsp;&nbsp;&nbsp; at
-	    <a href="https://spls-series.github.io/meetings/2021/october/" target="_blank">SPLS</a> (online),
-	    20/10/2021, <a href="slides/decorated-trees.pdf" target="_blank">[slides]</a></li>
-	  <li><b>Some Thoughts on a Datatype for Higher Genus Graphs</b> <br> &nbsp;&nbsp;&nbsp;&nbsp;at
-	    <a href="https://msp.cis.strath.ac.uk/msp101.html" target="_blank">MSP
-	      101</a>, 25/02/2021, <a href="slides/higher-genus-graphs.pdf" target="_blank">[slides]</a></li>
+	  <li><b>Decorated Trees</b><br> &nbsp;&nbsp;&nbsp;&nbsp; at
+	    <a href="https://spls-series.github.io/meetings/2021/october/"
+	    target="_blank">SPLS</a> (online),
+	    20/10/2021, <a href="slides/decorated-trees.pdf"
+	    target="_blank">[slides]</a></li>
+	  <li><b>Some Thoughts on a Datatype for Higher Genus Graphs</b> <br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at
+	    <a href="https://msp.cis.strath.ac.uk/msp101.html"
+	      target="_blank">MSP 101</a>,
+	      25/02/2021, <a href="slides/higher-genus-graphs.pdf"
+	      target="_blank">[slides]</a></li>
 	  <li><b>A Combinatorial Presentation of the Operad of Plane Graphs</b>
 	    <ul>
 	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at
 		<a href="https://www.cl.cam.ac.uk/events/syco/strings3-syco5/"
-		   target="_blank">STRINGS3</a> in Birmingham, 02/09/2019, <a href="slides/operad-plane-graphs.pdf" target="_blank">[slides]</a></li>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://msp.cis.strath.ac.uk/msp101.html" target="_blank">MSP 101</a>, 30/08/2019</li>
+		   target="_blank">STRINGS3</a> in Birmingham,
+		   02/09/2019, <a href="slides/operad-plane-graphs.pdf"
+		   target="_blank">[slides]</a></li>
+	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://msp.cis.strath.ac.uk/msp101.html"
+	      target="_blank">MSP 101</a>, 30/08/2019</li>
 	    </ul>
 	  </li>
-	  <li><b>Containers of Applications and Applications of Containers</b>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;at <a
-					       href="https://spls-series.github.io/meetings/archive/eb.host.cs.st-andrews.ac.uk/SPLS-Feb19/"
-					       target="_blank">SPLS</a> in
-		St Andrews, 13/03/2019
-	      </li>
-	      <li>
-		&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://cas.oslo.no/types2019/"
-					      target="_blank">TYPES</a> in Oslo, 13/06/2019
-	      </li>
-	    </ul>
-	  </li>
-	  <li><b>Finitary Indexed Containers</b><br>&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://msp.cis.strath.ac.uk/msp101.html" target="_blank">MSP 101</a>, 15/02/2019 </li>
-	</dl>
-      </div>
-    </section>
+	  <li><b>Containers of Applications and Applications of
+	    Containers</b><br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://spls-series.github.io/meetings/archive/eb.host.cs.st-andrews.ac.uk/SPLS-Feb19/"
+	    target="_blank">SPLS</a> in St Andrews, 13/03/2019
 
-    <section class="section is-size-5">
-      <div class="container">
-	<h3 class="title">Projects</h3>
-	<dl>
-	  <li>
-	    <b>Read the <s>Mood</s> Mode and Stay Positve - adding polarity annotations in
-	      Agda</b><br>
-	    &nbsp;&nbsp;&nbsp;&nbsp;joint work with J. Ceulemans, L. Escot, A. Nuyts, J. Poiret<br>
-	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="papers/types-2023.pdf" target="_blank">[abstract]</a> at <a href="https://types2023.webs.upv.es/" target="_blank">TYPES</a> in
-	    Val&egrave;ncia, 12/06/2023
 	  </li>
-	  <li>
-	    <b>TypOS: An Operating System for Typechecking Actors</b><br>
-	    &nbsp;&nbsp;&nbsp;&nbsp;joint work with G. Allais,  C. McBride, G. Nakov, F. Nordvall Forsberg, C. Roy<br>
-	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="papers/TypOS.pdf" target="_blank">[abstract]</a>
-	    and <a href="https://www.youtube.com/watch?v=2ZmoexvTw6c"
-		   target="_blank">[talk recording]</a> at at <a href="https://types22.inria.fr/"
-								 target="_blank">TYPES</a> in Nantes, 23/06/2022
+	  <li><b>Finitary Indexed
+	  Containers</b><br>&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://msp.cis.strath.ac.uk/msp101.html"
+	  target="_blank">MSP 101</a>, 15/02/2019
 	  </li>
 	</dl>
       </div>
@@ -268,15 +290,27 @@
       <div class="container">
 	<h3 class="title"> Involvement </h3>
 	<dl>
-	  <li> I am a member of
+	   <li> I am one of the organisers of the
+	  <a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
+	  target="_blank">Quantum Informatics Spring School 2026</a> on the Isle
+	  of Skye.
+	  </li>
+	  <li>
+	    I am a member of
 	  the <a href="https://sites.google.com/view/thetypesconferences"
-	  target="_blank">TYPES</a> Steering Committee (term: 2025-2028). </li>
-	  <li> I was one of the organisers of the Scottish Programming Languages
+	  target="_blank">TYPES</a> Steering Committee (term: 2025-2028).
+	  </li>
+	  <li>
+	    I was one of the organisers of the Scottish Programming Languages
 	  and Verification Summer
 	  School, <a href="https://spli.scot/splv/2025-edinburgh/"
-	  target="_blank">SPLV 2025</a>, in Edinburgh.</li>
-	  <li> I served on the Program Committee for
-	  <a href="https://msp.cis.strath.ac.uk/types2025/" target="_blank">TYPES 2025</a>. </li>
+	  target="_blank">SPLV 2025</a>, in Edinburgh.
+	  </li>
+	  <li>
+	    I served on the Program Committee for
+	  <a href="https://msp.cis.strath.ac.uk/types2025/"
+	     target="_blank">TYPES 2025</a>.
+	  </li>
 	</dl>
       </div>
     </section>
