--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
 	  School 2026</b> on the Isle of Skye. <br>Save the date: 24-29 of May
 	  2026, and keep an eye on the
-	  <a href="<a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
+	  <a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
 	  target="_blank">website</a> for confirmed details.
 	  </li>
 	</dl>
