--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	<div class="columns">
 	  <div class="column">
 	    I'm interested in graphical languages, combinatorial graph theory,
-	    programming language theory, type theory, metaprogramming, and
-	    applied category theory.<br><br>
+	    programming language theory, type theory, applied category theory,
+	    and quantum programming languages.<br><br>
 
 	    Do get in touch if you're interested in any of these topics! <br>
 	    malin [dot] altenmuller [at] ed [dot] ac [dot] uk<br><br> My
@@ -122,13 +122,12 @@
 	<h3 class="title"> Abstracts </h3>
 	<dl>
 	  <li>
-	    <b>Strictness by Rewrite: Formalising Bipermutative Categories
-	      and Quantum Program Semantics in Agda</b><br>
+	    <b>Strictness by Rewrite: Formalising Bipermutative Categories and
+	      Quantum Program Semantics in Agda</b><br>
 	      &nbsp;&nbsp;&nbsp;&nbsp;poster at
 		<a href="https://popl26.sigplan.org/home/planqc-2026"
 		   target="_blank">PLanQC</a>, 12/01/2026,
-		<a href="papers/planqc-2026.pdf" target="_blank">[extended
-		  abstract]</a>
+		<a href="papers/planqc-2026.pdf" target="_blank">[abstract]</a>
 	  </li>
 	  <li>
 	    <b>A Category of Plane Graphs</b><br> &nbsp;&nbsp;&nbsp;&nbsp;at
@@ -146,7 +145,7 @@
 	      &nbsp;&nbsp;&nbsp;&nbsp;
 	      at <a href="https://types2023.webs.upv.es/"
 	      target="_blank">TYPES</a> in Val&egrave;ncia,
-	      12/06/2023,<a href="papers/types-2023.pdf"
+	      12/06/2023, <a href="papers/types-2023.pdf"
 	      target="_blank">[abstract]</a>
 	  </li>
 	  <li>
@@ -163,11 +162,12 @@
 	    G. Nakov, F. Nordvall Forsberg, C. Roy<br>
 	    &nbsp;&nbsp;&nbsp;&nbsp;at at <a href="https://types22.inria.fr/"
 	    target="_blank">TYPES</a> in Nantes,
-	    23/06/2022,<a href="papers/TypOS.pdf" target="_blank">[abstract]</a>
+	    23/06/2022, <a href="papers/TypOS.pdf" target="_blank">[abstract]</a>
 	    and <a href="https://www.youtube.com/watch?v=2ZmoexvTw6c"
 	    target="_blank">[talk recording]</a>
 	  </li>
-	  <li><b>Containers of Applications and Applications of Containers</b><br>
+	  <li><b>Containers of Applications and Applications of
+		Containers</b><br>
 		&nbsp;&nbsp;&nbsp;&nbsp;at <a href="https://cas.oslo.no/types2019/"target="_blank">TYPES</a>
 		in Oslo, 13/06/2019
 	  </li>
