more small changes

--- a/index.html
+++ b/index.html
@@ -13,29 +13,26 @@
 	<h3 class="title">Malin Altenmüller</h3><br>
 	<div class="columns">
 	  <div class="column">
-	    I'm a postdoc in the <a href="https://homepages.inf.ed.ac.uk/cheunen/group.html"
-				    target="_blank">Quantum Programming
-				    Group</a> within
-				    the <a href="https://www.quantumsoftwarelab.com/"
-				    target="_blank">Quantum Software Lab</a> at
-				    the University of Edinburgh, working on
-				    programming languages for quantum systems.
+	    I'm a postdoc in
+	    the <a href="https://homepages.inf.ed.ac.uk/cheunen/group.html"
+	    target="_blank">Quantum Programming Group</a> within
+	    the <a href="https://www.quantumsoftwarelab.com/"
+	    target="_blank">Quantum Software Lab</a> at the University of
+	    Edinburgh, working on programming languages for quantum systems.
 	    <br><br>
-
-	    Before that I was a PhD student inthe <a href="https://msp.cis.strath.ac.uk/"
-		   target="_blank">Mathematically Structured Programming Group</a> at the
-            University of Strathclyde in Glasgow. My thesis discusses
-            combinatorial representations of string diagrams for non-symmetric
-            monoidal categories, and can be
-            found <a href="thesis/thesis.pdf"
-		     target="_blank">[here]</a> (version before corrections).
+	    Before that I was a PhD student in
+	    the <a href="https://msp.cis.strath.ac.uk/"
+	    target="_blank">Mathematically Structured Programming Group</a> at
+	    the University of Strathclyde in Glasgow. My thesis discusses
+	    combinatorial representations of string diagrams for non-symmetric
+	    monoidal categories, and can be found <a href="thesis/thesis.pdf"
+	    target="_blank">[here]</a> (version before corrections).
 	    <br><br>
 	    During some of my PhD I was also a research intern with
 	    the <a href="https://blogs.ed.ac.uk/he-lab/"
-		   target="_blank">Programming Languages Group</a> at Huawei in
+	    target="_blank">Programming Languages Group</a> at Huawei in
 	    Edinburgh.
 	    <br><br>
-
 	  </div>
 	  <div class="column is-one-fifth">
 	    <img src="MA01.JPG" alt="a photo of Malin">
@@ -45,11 +42,12 @@
 	  <div class="column">
 	    I'm interested in graphical languages, combinatorial graph theory,
 	    programming language theory, type theory, applied category theory,
-	    and quantum programming languages.<br><br>
-
+	    and quantum programming languages.
+	    <br><br>
 	    Do get in touch if you're interested in any of these topics! <br>
-	    malin [dot] altenmuller [at] ed [dot] ac [dot] uk<br><br> My
-	    pronouns are <a href="https://pronouns.org/she-her"
+	    malin [dot] altenmuller [at] ed [dot] ac [dot] uk
+	    <br><br>
+	    My pronouns are <a href="https://pronouns.org/she-her"
 	    target="_blank">she/her</a>.
 	  </div>
 	  <div class="column is-one-half">
@@ -65,21 +63,17 @@
 	<h3 class="title">News</h3>
 	<dl>
 	  <li>I will be presenting a poster at the PLanQC workshop:<br>
-	    <b>Strictness by Rewrite: Formalising Bipermutative Categories
-	      and Quantum Program Semantics in Agda</b><br>
-	    <ul>
-	      <li>&nbsp;&nbsp;&nbsp;&nbsp;poster at
+	    <b>Strictness by Rewrite: Formalising Bipermutative Categories and
+	      Quantum Program Semantics in Agda</b><br>
+	      &nbsp;&nbsp;&nbsp;&nbsp;poster at
 		<a href="https://popl26.sigplan.org/home/planqc-2026"
 		   target="_blank">PLanQC</a>, 12/01/2026,
 		<a href="papers/planqc-2026.pdf" target="_blank">[extended
 		abstract]</a>
-
-	      </li>
-	    </ul>
 	  </li>
 	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
-	  School 2026</b> on the Isle of Skye. <br>Save the date: 24-29 of May
-	  2026, and keep an eye on the
+	      School 2026</b> on the Isle of Skye. <br>
+	    Save the date: 24-29 of May 2026, and keep an eye on the
 	  <a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
 	  target="_blank">website</a> for confirmed details.
 	  </li>
