planqc section and poster

--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
 
      </div>
     </section>
+
+
+    <section class="section is-size-5">
+      <div class="container">
+	<h3 class="title">PLanQC 2026 Materials</h3>
+	<dl>
+	  <li> The abstract <b>Strictness by Rewrite: Formalising Bipermutative Categories and
+	      Quantum Program Semantics in Agda</b> can be
+	      found <a href="papers/planqc-2026.pdf"
+		       target="_blank">[here]</a></li>.
+ 	  <li> I have uploaded the <a href="posters/poster-planqc-2026.pdf"
+ 				      target="_blank">[poster]</a> here.
+	  </li>
+	  <li> Here is the <a href="https://github.com/maltenmuller/rewriting-rig"
+ 				      target="_blank">github repository</a>
+ 	    with the code used in the abstract.
+	  </li>
+	</dl>
+      </div>
+    </section>
+
+
+
     <section class="section is-size-5">
       <div class="container">
 	<h3 class="title">News</h3>
