--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 	  <li> The abstract <b>Strictness by Rewrite: Formalising Bipermutative Categories and
 	      Quantum Program Semantics in Agda</b> can be
 	      found <a href="papers/planqc-2026.pdf"
-		       target="_blank">[here]</a></li>.
+		       target="_blank">[here]</a>.
+	  </li>
  	  <li> I have uploaded the <a href="posters/poster-planqc-2026.pdf"
  				      target="_blank">[poster]</a> here.
 	  </li>
