post-planqc update

--- a/index.html
+++ b/index.html
@@ -59,42 +59,10 @@
      </div>
     </section>
 
-
-    <section class="section is-size-5">
-      <div class="container">
-	<h3 class="title">PLanQC 2026 Materials</h3>
-	<dl>
-	  <li> The abstract <b>Strictness by Rewrite: Formalising Bipermutative Categories and
-	      Quantum Program Semantics in Agda</b> can be
-	      found <a href="papers/planqc-2026.pdf"
-		       target="_blank">[here]</a>.
-	  </li>
- 	  <li> I have uploaded the <a href="posters/poster-planqc-2026.pdf"
- 				      target="_blank">[poster]</a> here.
-	  </li>
-	  <li> Here is the <a href="https://github.com/maltenmuller/rewriting-rig"
- 				      target="_blank">github repository</a>
- 	    with the code used in the abstract.
-	  </li>
-	</dl>
-      </div>
-    </section>
-
-
-
     <section class="section is-size-5">
       <div class="container">
 	<h3 class="title">News</h3>
 	<dl>
-	  <li>I will be presenting a poster at the PLanQC workshop:<br>
-	    <b>Strictness by Rewrite: Formalising Bipermutative Categories and
-	      Quantum Program Semantics in Agda</b><br>
-	      &nbsp;&nbsp;&nbsp;&nbsp;poster at
-		<a href="https://popl26.sigplan.org/home/planqc-2026"
-		   target="_blank">PLanQC</a>, 12/01/2026,
-		<a href="papers/planqc-2026.pdf" target="_blank">[extended
-		abstract]</a>
-	  </li>
 	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
 	      School 2026</b> on the Isle of Skye. <br>
 	    Save the date: 24-29 of May 2026, and keep an eye on the
@@ -145,7 +113,11 @@
 	      &nbsp;&nbsp;&nbsp;&nbsp;poster at
 		<a href="https://popl26.sigplan.org/home/planqc-2026"
 		   target="_blank">PLanQC</a>, 12/01/2026,
-		<a href="papers/planqc-2026.pdf" target="_blank">[abstract]</a>
+		<a href="papers/planqc-2026.pdf" target="_blank">[abstract]</a>,
+		<a href="posters/poster-planqc-2026.pdf"
+		   target="_blank">[poster]</a>, link to the
+		<a href="https://github.com/maltenmuller/rewriting-rig"
+ 				      target="_blank">github repository</a>
 	  </li>
 	  <li>
 	    <b>Read the <s>Mood</s> Mode and Stay Positve - adding polarity
