--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@
 	<a href="https://sites.google.com/view/catniporg/meetings" target="_blank">category theory seminars in Scotland</a>,
 	<a href="https://davidmathlogic.com/colorblind/" target="_blank">colouring for colourblind</a>,
 	<a href="https://julesjacobs.com/misc/deadlines/" target="_blank">PL deadline calendar</a>,
-	<a href="https://tikzcd.yichuanshen.de/" target="_blank">editor for tikz-cd diagrams </a>,
+	<a href="https://tikzcd.yichuanshen.de/" target="_blank">editor for
+	  tikz-cd diagrams</a>,<br>
+	<a href="https://edinburghhoppers.com/" target="_blrank">Edinburgh Hoppers</a>,
 	<a href="https://what3words.com" target="_blank">What3Words</a>,
 	<!--<a href="https://www.bbc.co.uk/food/recipes/sticky_toffee_pudding_05454"
 	   target="_blank">a good recipe</a>,-->
