--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 	<h3 class="title">News</h3>
 	<dl>
 	  <li> I am one of the organisers of the <b>Quantum Informatics Spring
-	      School 2026</b> on the Isle of Skye. <br>
-	    Save the date: 24-29 of May 2026, and keep an eye on the
+	      School 2026</b> on the Isle of Skye, 24-29 May. <br>
+	   Applications are open now! All details are on the
 	  <a href="https://www.quantuminformatics-cdt.ac.uk/spring-school/"
-	  target="_blank">website</a> for confirmed details.
+	  target="_blank">website</a>.
 	  </li>
 	</dl>
       </div>
